[package]
name = "memchr"
version = "0.1.11"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>", "bluss"]
description = "Safe interface to memchr."
documentation = "http://burntsushi.net/rustdoc/memchr/"
homepage = "https://github.com/BurntSushi/rust-memchr"
repository = "https://github.com/BurntSushi/rust-memchr"
readme = "README.md"
keywords = ["memchr", "char", "scan", "strchr", "string"]
license = "Unlicense/MIT"

[dependencies]
libtww = { path = "../.." }

[dev-dependencies]
quickcheck = "0.2"
